force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/smagicinteract__SenderId_Profile_Map__c.object-meta.xml
<CustomObject>
    <label>SenderId Profile Map</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SenderId Profile Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>