force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__Default_SenderId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Default_SenderId__c</fullName>
    <formula>smagicinteract__SenderId_Lookup__r.smagicinteract__senderId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default SenderId</label>
    <type>Text</type>
</CustomField>