force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__Profile__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Profile__c</fullName>
    <label>Profile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>