force-app/main/default/objects/smagicinteract__SenderId_Profile_Map__c/fields/smagicinteract__SenderId_Lookup__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SenderId_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SenderId Lookup</label>
    <referenceTo>smagicinteract__SMS_SenderId__c</referenceTo>
    <relationshipLabel>SenderId Profile Map</relationshipLabel>
    <relationshipName>SenderId_Profile_Map</relationshipName>
    <type>Lookup</type>
</CustomField>